.happypack/s-2039114848
SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/app/store/configureStore.js: 'return' outside of function (23:2)

[0m [90m 21 | [39m  }
 [90m 22 | [39m
[31m[1m>[22m[39m[90m 23 | [39m  [36mreturn[39m store[33m;[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 24 | [39m}
 [90m 25 | [39m[0m

BabelLoaderError: SyntaxError: C:/Users/Dmitriy/WebstormProjects/FirstProject/app/store/configureStore.js: 'return' outside of function (23:2)

[0m [90m 21 | [39m  }
 [90m 22 | [39m
[31m[1m>[22m[39m[90m 23 | [39m  [36mreturn[39m store[33m;[39m
 [90m    | [39m  [31m[1m^[22m[39m
 [90m 24 | [39m}
 [90m 25 | [39m[0m

    at transpile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:63:13)
    at Object.module.exports (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\babel-loader\lib\index.js:163:20)
    at applySyncOrAsync (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:341:21)
    at apply (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:268:5)
    at C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:131:7
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:184:14)
    at applyPitchLoader (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:192:14)
    at applyPitchLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:222:4)
    at applyLoaders (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\applyLoaders.js:116:3)
    at HappyWorker.compile (C:\Users\Dmitriy\WebstormProjects\FirstProject\node_modules\happypack\lib\HappyWorker.js:32:3)